--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.1",
+    "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
+    "cors": "^2.8.5",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
+    "react-countup": "^4.4.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
