--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@material-ui/core": "^5.0.0-beta.1",
     "axios": "^0.21.1",
     "chart.js": "^3.4.1",
-    "cors": "^2.8.5",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-countup": "^4.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.31.0",
